<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.net-->
<resources>
    <string name="app_name">Gobandroid</string>
    <string name="start_game">Start Game</string>
    <string name="start">Start</string>
    <string name="load_game">Load Game</string>
    <string name="load_tsumego">Load Tsumego</string>
    <string name="tsumego">Tsumego</string>
    <string name="info">Info</string>
    <string name="quit">Quit</string>
    <string name="quit_confirm">Do you really want to quit this game?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="end_game_quesstion_title">End Game?</string>
    <string name="comments">Comments</string>
    <string name="ok">OK</string>
    <string name="wait_gnugo">Wait for GnuGo to settle</string>
    <string name="not_your_turn">It\'s not your turn!</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="pass">Pass</string>
    <string name="cancel">Cancel</string>
    <string name="results">Result</string>
    <string name="settings">Settings</string>
    <string name="links">Links</string>
    <string name="save_as_sgf">Save as SGF</string>
    <string name="move">Move</string>
    <string name="problem_listing_sgf">Problem listing SGF\'s</string>
    <string name="there_are_no_files_in">There are no files in</string>
    <string name="sgf_path_invalid">The SGF Path is invalid</string>
    <string name="android_market_problem">Can\'t Access the Android Market - you will have to install manually.</string>
    <string name="problem">Problem</string>
    <string name="gameplay">Gameplay</string>
    <string name="game_results">Game Result</string>
    <string name="game_pass">Pass</string>
    <string name="show_review_controls">Show review Controls</string>
    <string name="hide_review_controls">Hide review Controls</string>
    <string name="game_ended_in_draw">The Game ended in a draw</string>
    <string name="variations">Variations</string>
    <string name="territory">Territory</string>
    <string name="captures">Captures</string>
    <string name="komi">Komi</string>
    <string name="filal_points">Final Points</string>
    <string name="save_sgf">save SGF</string>
    <string name="invalid_move_ko">KO!</string>
    <string name="invalid_move_no_liberties">no liberties!</string>
    <string name="hint_stone_move">You tapped on the current stone. This initiates moving a stone which is indicated by
        a half transparent Stone.
    </string>
    <string name="mark_last_stone">mark last stone</string>
    <string name="mark_last_stone_summary">little circle showing last stone</string>
    <string name="first_tap_zooms">first tap zooms</string>
    <string name="first_tap_zooms_summary">aka fat finger mode</string>
    <string name="viewable_stone">place stone viewable</string>
    <string name="viewable_stone_sum">stone above finger to see it</string>
    <string name="grid_emboss_summary">emboss the grid or pure black</string>
    <string name="grid_emboss">Grid Emboss</string>
    <string name="show_legend">Show Legend</string>
    <string name="show_legend_summary">show legend to see position fast</string>
    <string name="variant_mode">Variant Handling</string>
    <string name="variant_mode_summary">how to handle variants when undoing</string>
    <string name="path">Path</string>
    <string name="sgf_path">SGF Path</string>
    <string name="enter_sgf_path_request">Please enter the Path where the SGF Files should be saved.</string>
    <string name="set_ai_strength">Set A.I. Strength</string>
    <string name="ai_strength">A.I. strength</string>
    <string name="ai_preferences">A.I. Preferences</string>
    <string name="set_skin">Set Skin</string>
    <string name="board_skin">Board Skin</string>
    <string name="fullscreen_board">Fullscreen Board</string>
    <string name="fullscreen_board_summary">see some more Board</string>
    <string name="constant_light">Constant Light</string>
    <string name="drain_your_battery_while_playing">drain your Battery while playing</string>
    <string name="stone_skin">Stone Skin</string>
    <string name="screen">Screen</string>
    <string name="sgf_legend">SGF Legend</string>
    <string name="sgf_legend_summary">GHJKL instead of GHIJKL</string>
    <string name="sgf_preferences">SGF Preferences</string>
    <string name="filename">Filename</string>
    <string name="sgf_filename">SGF Filename</string>
    <string name="game_info">Game Info</string>
    <string name="add_to_sgf">Add to FileName:</string>
    <string name="save_sgf_question">Please instruct me on how the file I will write to %s should be named:</string>
    <string name="share_question">share after saving?</string>
    <string name="gamename">GameName</string>
    <string name="date">Date</string>
    <string name="players">Players</string>
    <string name="time">Time</string>
    <string name="enter_default_filename_for_sgf_request">Please enter the default Filename for SGF Files.</string>
    <string name="review_game">Review</string>
    <string name="record_game">Record</string>
    <string name="dashboard_problems">Tsumego</string>
    <string name="hint">Hint</string>
    <string name="link_title">Links</string>
    <string name="link_tab_about">About</string>
    <string name="link_tab_credits">Credits</string>
    <string name="help">Help</string>
    <string name="link_tab_sgf">SGF\'s</string>
    <string name="game_mode">Mode</string>
    <string name="switch_game_mode">Switch Mode</string>
    <string name="bookmark">Bookmark</string>
    <string name="menu_autoplay">Autoplay</string>
    <string name="tsumego_off_path">Unknown Variation - usually means that your move is sub-optimal :-(</string>
    <string name="tsumego_correct">Correct !-)</string>
    <string name="refresh">sync</string>
    <string name="tsumego_sgf_no_solution">You are trying to open this SGF as a Tsumego - but I cannot find a marked
        Solution - you can try anyway but I cannot applaud you when you are correct :-(
    </string>
    <string name="working">Working</string>
    <string name="please_stay_patient">Please stay patient</string>
    <string name="creating_thumbnails">Creating thumbnails - Please stay patient</string>
    <string name="gnugo">GnuGo</string>
    <string name="gnugo_not_installed">GnuGo not installed - to proceed please install!</string>
    <string name="preferences">Preferences</string>
    <string name="board_setup">Board Setup</string>
    <string name="for_recording">for Recording</string>
    <string name="sound">Sound</string>
    <string name="enable_sound">Enable Sound</string>
    <string name="enable_sound_summary">Hear the Stones and the Board</string>
    <string name="install_gnugo">Install GnuGo</string>
    <string name="download_report">Download Report</string>
    <string name="game_name">Game Name</string>
    <string name="black_name">Black Name</string>
    <string name="black_rank">Black Rank</string>
    <string name="white_name">White Name</string>
    <string name="white_rank">White Rank</string>
    <string name="game_result">Game Result</string>
    <string name="black_won_with">"Black won with "</string>
    <string name="_points_">" Points."</string>
    <string name="white_won_with_">"White won with "</string>
    <string name="bookmark_to_write_into">"bookmark to write into "</string>
    <string name="loading_sgf">Loading SGF</string>
    <string name="review">Review</string>
    <string name="record">Record</string>
    <string name="autoplay_off">autoplay off</string>
    <string name="autoplay_on">autoplay on</string>
    <string name="mark_next">mark next</string>
    <string name="mark_path">mark path</string>
    <string name="handicap">Handicap</string>
    <string name="size">Size</string>
    <string name="enter_your_comments_here">enter your comments here</string>
    <string name="keep_variant_">Keep Variation?</string>
    <string name="keep_this_move_as_variation">Do you want to keep this move as variation?</string>
    <string name="numbered_end">number path</string>
    <string name="icon">icon</string>
    <string name="go_tv">GoTV</string>
    <string name="i_do_not_want_to_keep_variants_for_this_game">never in this game</string>
    <string name="end_review">End review?</string>
    <string name="komi_must_be_a_number">Komi must be a number</string>
    <string name="youtube_tutorial">Tutorial on YouTube</string>
    <string name="youtube_tutorial_link">http://www.youtube.com/watch?v=gECcsSeRcNo</string>
    <string name="wikipedia_rules">Article on Wikipedia</string>
    <string name="wikipedia_rules_link">http://en.wikipedia.org/wiki/Go_(game)</string>
    <string name="televize">Televize</string>
    <string name="count">Count</string>
    <string name="notifications">Notifications</string>
    <string name="push_tsumego">Push Tsumego</string>
    <string name="push_tsumego_extra">more tsumego to solve every week</string>
    <string name="gnugo_strength">GnuGo strength:</string>
    <string name="gnugo_plays">GnuGo plays:</string>
    <string name="black">black</string>
    <string name="white">white</string>
    <string name="black_and_white">Black &amp; White</string>
    <string name="for_gnugo">for GnuGo</string>
    <string name="problem_loading_sgf_would_you_like_to_send_ligi_this_sgf_to_fix_the_problem">Problem Loading sgf would
        you like to send ligi this sgf to fix the problem?
    </string>
    <string name="go_back">go back</string>
    <string name="download_status">Download Status</string>
    <string name="downloading_tsumegos_please_wait">Downloading Tsumegos Please wait...</string>
    <string name="no_new_tsumegos_found">No new Tsumegos found :-(</string>
    <string name="downloaded_n_tsumego">Downloaded %d new Tsumegos ;-)</string>
    <string name="overwrite_existing_file">Overwrite existing File</string>
    <string name="share">Share</string>
    <string name="score">Score</string>
    <string name="edit">Edit</string>
    <string name="play">Play</string>
    <string name="setup">Setup</string>
    <string name="load">LOAD</string>
    <string name="clear_board">clear board</string>
    <string name="invite">Invite</string>
    <string name="accept">accept</string>
    <string name="new_tsumegos_available">New Tsumegos available!</string>
    <string name="the_go_game_you_reviewed">The Go Game you reviewed</string>
    <string name="this_game_has_2_players_but_you_can_only_watch_it">This game has 2 players - but you can watch it
    </string>
    <string name="a_move_in_one_online_game_you_participate_is_done">A move in one online game you participate is done
    </string>
    <string name="new_move">new move</string>
    <string name="in_an_online_game_you_participate">in an online game you participate</string>
    <string name="choose_invite_method">choose invite method</string>
    <string name="you_are_invited_to_a_go_game">You are invited to a GO-Game ( size: %1$s , color: %2$s )</string>
    <string name="go_game_invitation">GO Game Invitation</string>
    <string name="uploading_game">uploading game</string>
    <string name="profile">Profile</string>
    <string name="name">name</string>
    <string name="rank">rank</string>
    <string name="empty_board">Empty Board</string>
    <string name="more">MORE</string>
    <string name="hints_used">%d hints requested</string>
    <string name="it_is_me">It\'s me</string>
    <string name="next_tsumego">next tsumego</string>
    <string name="beta_functions">Beta functionality</string>
    <string name="more_features_less_stable">more features but less stable</string>
    <string name="online">ONLINE</string>
    <string name="online_play">Online-Go</string>
    <string name="online_view_game">Watch</string>
    <string name="online_join_game">Join</string>
    <string name="online_create_game">Create</string>
    <string name="online_your_games">Your Games</string>
    <string name="enter_username">Please enter some username</string>
    <string name="who_are_you">Who are you?</string>
    <string name="delete">Delete</string>
    <string name="unknown">unknown</string>
    <string name="cannot_create_game_server_problem">Cannot create the game - please try again later</string>
    <string name="server_problem">Server Problem</string>
    <string name="file_saved">saved %s</string>
    <string name="file_not_saved">problen saving %s</string>
    <string name="game_created">Game Created</string>
    <string name="game_created_msg">Game created - enjoy this game!\nTIP: You can also do something else with gobandroid
        in the background while waiting for the opponent.
    </string>
    <string name="choose_how_to_send_sgf">Choose how to send the SGF</string>
    <string name="recorded_game">Recorded Game</string>
    <string name="commented_game">Commented Game</string>
    <string name="situation">Situation</string>
    <string name="other">Other</string>
</resources>
